--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p></p>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            body {
+                background-color: #121212;
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+            <h1>tbh nothing to find here im still learning</h1>
+        </div>
+    </body>
 </html>
