--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
                 background-color: #121212;
             }
         </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div>
             <h1>tbh nothing to find here im still learning</h1>
+        </div>
+        <div>
+            <h2>
+                contact: pred#2448
+            </h2>
         </div>
     </body>
 </html>
