--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 background-color: #121212;
             }
         </style>
+        <title>pred</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
